tests/test_assets/semantic/invalid/strings/assignment_element_type.cog
// semantic error at line 4: string literal destination must be u8 array
// 1 semantic error generated.

test::() -> void {
    value: i32[6] = [0, 0, 0, 0, 0, 0];

    value = "hello";
}