tests/test_assets/semantic/invalid/strings/assignment_element_type.expected
semantic error at line 7: string literal destination must be u8 array
1 semantic error generated.
